# app/Http/Requests/Api/TreatmentRequest.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Http\Requests\Api;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class TreatmentRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'type_medication'=>'required',
+            'etiology'=>'required',
+            'other_medication'=>'required',
+        ];
+    }
+}
